--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -21,9 +21,10 @@
   z-index: 1000;
   width: 700px;
   padding-bottom: 45px;
+  margin-bottom: 32px;
 }
 .popup-inner{
-  padding: 0 5vw;
+  padding: 0 2.5vw;
 }
 .top-popup {
   border-radius: 10px 10px 0 0;
@@ -60,9 +61,15 @@
 .title-popup {
   color: #202020;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 24px;
+  margin: 32px 0;
 }
-
+.subtitle-popup {
+  color: #202020;
+  font-weight: 500;
+  font-size: 20px;
+  margin: 16px 0;
+}
 .popup-link-add {
   padding: 0;
   font-size: 18px;
@@ -70,6 +77,20 @@
   text-decoration: underline;
 }
 
+.popup-decoration{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  width: 100%;
+  height: 250px;
+  background-color: #333333;
+  margin: 32px 0;
+}
+.popup .button{
+  width: fit-content;
+  margin-top: 24px;
+}
 @media screen and (min-width: 0px) and (max-width: 425px) {
   .top-popup {
     height: 70px;
