--- a/app/views/oeuvres/_form.html.erb
+++ b/app/views/oeuvres/_form.html.erb
@@ -63,12 +63,12 @@
       <%= form.text_area :impact_et_message, placeholder: "Impact et message (Min. 200 caractères)" %>
     </div>
     <div>
-      <%= form.collection_select :concept_ids,
-        Concept.order(:name),
+      <%= form.collection_select :notion_ids,
+        Notion.order(:name),
         :id,
         :name,
         { include_blank: false },
-        { class: "form-control concept-select", multiple: true, name: "oeuvre[concept_ids][]" } %>
+        { class: "form-control concept-select", multiple: true, name: "oeuvre[notion_ids][]" } %>
     </div>
     <div>
       <%= form.text_field :image, placeholder: "Url de l'image" %>
