--- a/app/views/pages/parrainage_filleul.html.erb
+++ b/app/views/pages/parrainage_filleul.html.erb
@@ -9,7 +9,7 @@
   <p class="subtitle">Profitez des avantages du parrainage et partagez votre passion pour l'apprentissage avec vos amis et collègues.</p>
 </section>
 <section class="grid-1">
-  <div style="display: inline-flex; align-items:center; gap:8px; margin-top:32px">
+   <div style="display: inline-flex; align-items:center; gap:8px; margin-top:32px" id="openPopup">
     <svg width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M7.87802 11.8587C7.84273 11.8977 7.80986 11.9388 7.77956 11.9817C7.74851 12.0275 7.72368 12.0771 7.70573 12.1294C7.68207 12.1759 7.66548 12.2257 7.6565 12.2771C7.65247 12.3317 7.65247 12.3866 7.6565 12.4412C7.65373 12.5488 7.67621 12.6556 7.72213 12.7529C7.75898 12.8548 7.81777 12.9472 7.89433 13.0238C7.97089 13.1003 8.06336 13.1591 8.16517 13.196C8.26338 13.2394 8.36956 13.2618 8.47694 13.2618C8.58431 13.2618 8.69049 13.2394 8.7887 13.196C8.89051 13.1591 8.98298 13.1003 9.05954 13.0238C9.1361 12.9472 9.19489 12.8548 9.23174 12.7529C9.26817 12.6532 9.28489 12.5473 9.28096 12.4412C9.28159 12.3332 9.26089 12.2262 9.22006 12.1262C9.17923 12.0262 9.11907 11.9353 9.04304 11.8587C8.96677 11.7818 8.87602 11.7207 8.77605 11.6791C8.67607 11.6374 8.56883 11.616 8.46053 11.616C8.35222 11.616 8.24498 11.6374 8.14501 11.6791C8.04503 11.7207 7.95429 11.7818 7.87802 11.8587ZM8.46053 0.955078C6.83786 0.955078 5.25163 1.43626 3.90243 2.33776C2.55323 3.23927 1.50166 4.52061 0.880688 6.01976C0.259719 7.51891 0.0972457 9.16854 0.413813 10.76C0.73038 12.3515 1.51177 13.8134 2.65917 14.9608C3.80657 16.1082 5.26845 16.8896 6.85994 17.2061C8.45143 17.5227 10.101 17.3602 11.6002 16.7393C13.0993 16.1183 14.3807 15.0667 15.2822 13.7175C16.1837 12.3683 16.6649 10.7821 16.6649 9.15944C16.6649 8.08202 16.4527 7.01516 16.0404 6.01976C15.6281 5.02437 15.0237 4.11992 14.2619 3.35808C13.5 2.59623 12.5956 1.99191 11.6002 1.5796C10.6048 1.16729 9.53794 0.955078 8.46053 0.955078ZM8.46053 15.7229C7.16239 15.7229 5.89341 15.338 4.81405 14.6168C3.73469 13.8956 2.89343 12.8705 2.39666 11.6712C1.89988 10.4719 1.7699 9.15215 2.02316 7.87896C2.27641 6.60577 2.90152 5.43627 3.81944 4.51835C4.73736 3.60043 5.90686 2.97532 7.18005 2.72207C8.45325 2.46881 9.77294 2.59879 10.9723 3.09557C12.1716 3.59234 13.1967 4.4336 13.9179 5.51296C14.6391 6.59232 15.024 7.8613 15.024 9.15944C15.024 10.9002 14.3325 12.5696 13.1016 13.8005C11.8707 15.0314 10.2013 15.7229 8.46053 15.7229ZM8.46053 5.05726C8.02821 5.05698 7.60344 5.17058 7.22898 5.38661C6.85451 5.60265 6.54355 5.91351 6.32739 6.28791C6.26803 6.38129 6.22817 6.48571 6.21021 6.5949C6.19225 6.70408 6.19657 6.81577 6.22289 6.92324C6.24922 7.03072 6.29701 7.13176 6.3634 7.22028C6.42978 7.30881 6.51339 7.38299 6.60919 7.43836C6.70499 7.49374 6.811 7.52916 6.92084 7.5425C7.03069 7.55585 7.14209 7.54683 7.24836 7.516C7.35463 7.48517 7.45357 7.43316 7.53922 7.36311C7.62486 7.29305 7.69546 7.20639 7.74675 7.10835C7.81903 6.98314 7.92312 6.87927 8.04846 6.80723C8.1738 6.73519 8.31596 6.69755 8.46053 6.69813C8.67812 6.69813 8.8868 6.78457 9.04066 6.93843C9.19452 7.09229 9.28096 7.30097 9.28096 7.51856C9.28096 7.73616 9.19452 7.94484 9.04066 8.0987C8.8868 8.25256 8.67812 8.339 8.46053 8.339C8.24293 8.339 8.03425 8.42544 7.88039 8.5793C7.72653 8.73316 7.64009 8.94184 7.64009 9.15944V9.97987C7.64009 10.1975 7.72653 10.4061 7.88039 10.56C8.03425 10.7139 8.24293 10.8003 8.46053 10.8003C8.67812 10.8003 8.8868 10.7139 9.04066 10.56C9.19452 10.4061 9.28096 10.1975 9.28096 9.97987V9.83219C9.82357 9.63531 10.2797 9.25397 10.5697 8.75485C10.8596 8.25573 10.9649 7.67058 10.8672 7.10169C10.7694 6.5328 10.4749 6.01636 10.0349 5.64265C9.59501 5.26894 9.03774 5.06174 8.46053 5.05726Z" fill="#52525D"/>
     </svg>
@@ -34,3 +34,72 @@
     <%= link_to parrainage_path, class: "black underline" do %>Parrainer quelqu'un<% end %>
   </div>
 </section>
+<div id="popup" class="popup">
+  <div class="popup-content">
+    <div class="top-popup">
+      <svg class="close-popup" id="closePopupSave" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M19.9941 16.9964L33.3719 3.63981C33.7717 3.23995 33.9964 2.69763 33.9964 2.13215C33.9964 1.56667 33.7717 1.02435 33.3719 0.624492C32.972 0.224637 32.4297 0 31.8642 0C31.2987 0 30.7564 0.224637 30.3566 0.624492L17 14.0023L3.64343 0.624492C3.24358 0.224637 2.70125 5.02059e-07 2.13577 5.06273e-07C1.57029 5.10486e-07 1.02797 0.224637 0.628116 0.624492C0.228261 1.02435 0.00362441 1.56667 0.00362441 2.13215C0.0036244 2.69763 0.228261 3.23995 0.628116 3.63981L14.0059 16.9964L0.628116 30.3529C0.429087 30.5504 0.271115 30.7852 0.163309 31.044C0.055504 31.3027 0 31.5803 0 31.8606C0 32.1409 0.055504 32.4185 0.163309 32.6772C0.271115 32.936 0.429087 33.1709 0.628116 33.3683C0.825519 33.5673 1.06038 33.7253 1.31914 33.8331C1.5779 33.9409 1.85545 33.9964 2.13577 33.9964C2.4161 33.9964 2.69364 33.9409 2.95241 33.8331C3.21117 33.7253 3.44603 33.5673 3.64343 33.3683L17 19.9905L30.3566 33.3683C30.554 33.5673 30.7888 33.7253 31.0476 33.8331C31.3064 33.9409 31.5839 33.9964 31.8642 33.9964C32.1445 33.9964 32.4221 33.9409 32.6809 33.8331C32.9396 33.7253 33.1745 33.5673 33.3719 33.3683C33.5709 33.1709 33.7289 32.936 33.8367 32.6772C33.9445 32.4185 34 32.1409 34 31.8606C34 31.5803 33.9445 31.3027 33.8367 31.044C33.7289 30.7852 33.5709 30.5504 33.3719 30.3529L19.9941 16.9964Z" fill="#202020"/>
+      </svg>
+    </div>
+    <div class="popup-inner">
+      <p class="title-popup">Règles de parrainage</p>
+      <p class="subtitle-popup">Règles de base</p>
+      <p>1. Qui peut parrainer ?<br>
+      &nbsp;&nbsp;• Tout utilisateur inscrit depuis au moins 7 jours peut devenir parrain.<br>
+      &nbsp;&nbsp;• Les parrains doivent avoir une adresse e-mail vérifié.<br>
+      <br>
+      2. Qui peut être parrainé ?<br>
+      &nbsp;&nbsp;• Les filleuls doivent être de nouveaux utilisateurs (Compte créé depuis maximum 30j).<br>
+      &nbsp;&nbsp;• Un utilisateur ne peut être parrainé qu'une seule fois.</p>
+      <p class="subtitle-popup">Avantages pour les parrains</p>
+      <p>1. Récompenses pour chaque parrainage réussi :<br>
+      &nbsp;&nbsp;• Un parrain reçoit une récompense (5% de réduction sur son abonnement) une fois que le filleul remplit les conditions.<br>
+      &nbsp;&nbsp;• Les récompenses sont cumulables.<br>
+      <br>
+      2. Récompenses supplémentaires :<br>
+      &nbsp;&nbsp;• Les parrains atteignant un certain nombre de filleuls actifs (5 filleuls) obtiennent des bonus supplémentaires.</p>
+      <p class="subtitle-popup">Avantages pour les filleuls</p>
+      <p>Réduction ou bonus de bienvenue :<br>
+      &nbsp;&nbsp;• Chaque filleul bénéficie d’un cadeau exclusif à l’inscription grâce au code parrainage.<br>
+      &nbsp;&nbsp;• Cette offre est valable uniquement lors de la première inscription.</p>
+      <p class="subtitle-popup">Conditions et limitations</p>
+      <p>1. Période de validité des codes :<br>
+      &nbsp;&nbsp;• Les codes de parrainage sont valables pendant une période illimitée.<br>
+      <br>
+      2. Conditions pour valider un parrainage :<br>
+      &nbsp;&nbsp;• Le filleul doit remplir une action spécifique pour activer le parrainage (valider son compte).<br>
+      <br>
+      3. Limite de parrainages :<br>
+      &nbsp;&nbsp;• Les filleuls ne peuvent pas utiliser plus d’un code parrainage à la fois.</p>
+      <p class="subtitle-popup">Sanctions et prévention des abus</p>
+      <p>1. Détection des abus :<br>
+      &nbsp;&nbsp;• Toute tentative de fraude (ex. : auto-parrainage, création de comptes multiples) entraînera la suspension des avantages liés au parrainage.<br>
+      &nbsp;&nbsp;• Les parrains identifiés comme abusifs seront exclus du programme.<br>
+      <br>
+      2. Validation des comptes :<br>
+      &nbsp;&nbsp;• Les comptes filleuls doivent être authentiques et actifs pour que les parrainages soient validés.</p>
+    </div>
+  </div>
+</div>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const openPopupButton = document.getElementById("openPopup");
+    const closePopupButton = document.getElementById("closePopupSave");
+    const popup = document.getElementById("popup");
+
+    openPopupButton.addEventListener("click", function() {
+      popup.style.display = "flex";
+    });
+
+    closePopupButton.addEventListener("click", function() {
+      popup.style.display = "none";
+    });
+
+    // Fermer la popup en cliquant en dehors de celle-ci
+    window.addEventListener("click", function(event) {
+      if (event.target === popup) {
+        popup.style.display = "none";
+      }
+    });
+  });
+</script>
