--- a/app/views/pages/search_category.html.erb
+++ b/app/views/pages/search_category.html.erb
@@ -55,10 +55,13 @@
     <input id="workSearch" name="query" autocomplete="off" class="search-top-bar" type="search" placeholder="Rechercher une référence" style="background-image: url('data:image/svg+xml;utf8,<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;15&quot; height=&quot;15&quot; viewBox=&quot;0 0 15 15&quot; fill=&quot;none&quot;><path d=&quot;M14.7564 13.4147L11.9565 10.6231C12.8599 9.47218 13.3501 8.051 13.3482 6.58794C13.3482 5.28497 12.9619 4.01126 12.238 2.92788C11.5141 1.8445 10.4852 1.00011 9.2814 0.50148C8.07761 0.00285444 6.753 -0.127609 5.47506 0.126588C4.19713 0.380785 3.02327 1.00823 2.10193 1.92957C1.18059 2.8509 0.553149 4.02476 0.298952 5.3027C0.0447546 6.58063 0.175218 7.90525 0.673843 9.10903C1.17247 10.3128 2.01686 11.3417 3.10024 12.0656C4.18362 12.7895 5.45733 13.1759 6.7603 13.1759C8.22336 13.1777 9.64455 12.6875 10.7954 11.7842L13.5871 14.584C13.6636 14.6612 13.7547 14.7225 13.855 14.7643C13.9554 14.8061 14.063 14.8276 14.1717 14.8276C14.2804 14.8276 14.3881 14.8061 14.4884 14.7643C14.5888 14.7225 14.6799 14.6612 14.7564 14.584C14.8336 14.5075 14.8949 14.4164 14.9367 14.3161C14.9785 14.2157 15 14.1081 15 13.9994C15 13.8907 14.9785 13.783 14.9367 13.6827C14.8949 13.5823 14.8336 13.4912 14.7564 13.4147ZM1.81935 6.58794C1.81935 5.61071 2.10913 4.65543 2.65205 3.84289C3.19497 3.03036 3.96664 2.39706 4.86948 2.02309C5.77232 1.64913 6.76578 1.55128 7.72424 1.74193C8.68269 1.93257 9.56308 2.40315 10.2541 3.09416C10.9451 3.78516 11.4157 4.66556 11.6063 5.62401C11.797 6.58246 11.6991 7.57592 11.3251 8.47876C10.9512 9.3816 10.3179 10.1533 9.50535 10.6962C8.69281 11.2391 7.73753 11.5289 6.7603 11.5289C5.44988 11.5289 4.19313 11.0083 3.26652 10.0817C2.33991 9.15511 1.81935 7.89836 1.81935 6.58794Z&quot; fill=&quot;%23202020&quot;/></svg>'); background-repeat: no-repeat; background-position-x: 20px; background-position-y: center;">
 <% end %>
 <div class="top-bar-flex">
+  <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg" id="openPopup">
+    <path d="M29.9985 0C46.5566 0 60 13.4434 60 29.9985C60 46.5566 46.5566 60 29.9985 60C13.4434 60 0 46.5566 0 29.9985C0 13.4434 13.4434 0 29.9985 0ZM29.9985 24.006C28.7562 24.006 27.7479 25.0143 27.7479 26.2566V42.7607C27.7479 44.003 28.7562 45.0113 29.9985 45.0113C31.2408 45.0113 32.2491 44.003 32.2491 42.7607V26.2566C32.2491 25.0143 31.2408 24.006 29.9985 24.006ZM29.9925 15.0038C28.3361 15.0038 26.9917 16.3481 26.9917 18.0045C26.9917 19.6609 28.3361 21.0053 29.9925 21.0053C31.6489 21.0053 32.9932 19.6609 32.9932 18.0045C32.9932 16.3481 31.6489 15.0038 29.9925 15.0038Z" fill="#202020"/>
+  </svg>
   <%= link_to notifications_path do %>
     <div class="circle circle-notif">
-      <svg width="25" height="29" viewBox="0 0 25 29" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M24.8571 23.4762V24.8571H0V23.4762L2.7619 20.7143V12.4286C2.7619 8.14762 5.56524 4.37762 9.66667 3.16238V2.7619C9.66667 2.0294 9.95765 1.3269 10.4756 0.808943C10.9936 0.290985 11.6961 0 12.4286 0C13.1611 0 13.8636 0.290985 14.3815 0.808943C14.8995 1.3269 15.1905 2.0294 15.1905 2.7619V3.16238C19.2919 4.37762 22.0952 8.14762 22.0952 12.4286V20.7143L24.8571 23.4762ZM15.1905 26.2381C15.1905 26.9706 14.8995 27.6731 14.3815 28.1911C13.8636 28.709 13.1611 29 12.4286 29C11.6961 29 10.9936 28.709 10.4756 28.1911C9.95765 27.6731 9.66667 26.9706 9.66667 26.2381" fill="white"/>
+      <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M20.1825 5.26C19.3238 4.76133 18.7932 3.83333 18.7945 2.83333V2.82933C18.7958 1.26667 17.5438 0 15.9998 0C14.4558 0 13.2038 1.26667 13.2038 2.82933V2.83333C13.2052 3.83467 12.6758 4.76133 11.8158 5.26C5.59317 8.876 9.16917 20.88 2.6665 23.0013V25.3333H29.3332V23.0013C22.8305 20.88 26.4065 8.876 20.1825 5.26ZM15.9998 1.33333C16.7358 1.33333 17.3332 1.932 17.3332 2.66667C17.3332 3.40267 16.7358 4 15.9998 4C15.2638 4 14.6665 3.40267 14.6665 2.66667C14.6665 1.932 15.2638 1.33333 15.9998 1.33333ZM19.9998 28C19.9998 30.1307 18.1438 32 16.0385 32C13.9332 32 11.9998 30.1307 11.9998 28H19.9998Z" fill="white"/>
       </svg>
       <% if current_user %>
         <% if @unread_notifications_count > 0 %>
@@ -67,13 +70,6 @@
           </div>
         <% end %>
       <% end %>
-    </div>
-  <% end %>
-  <%= link_to new_feedback_url do %>
-    <div class="circle circle-notif">
-      <svg width="31" height="29" viewBox="0 0 31 29" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M19.5185 0C18.9095 0 18.3254 0.24193 17.8948 0.672569C17.4642 1.10321 17.2222 1.68728 17.2222 2.2963V6.88889C17.2222 7.4979 17.4642 8.08198 17.8948 8.51261C18.3254 8.94325 18.9095 9.18518 19.5185 9.18518V12.6296L23.6519 9.18518H28.7037C29.3127 9.18518 29.8968 8.94325 30.3274 8.51261C30.7581 8.08198 31 7.4979 31 6.88889V2.2963C31 1.68728 30.7581 1.10321 30.3274 0.672569C29.8968 0.24193 29.3127 0 28.7037 0H19.5185ZM9.18519 5.74074C7.96715 5.74074 6.79901 6.2246 5.93773 7.08588C5.07645 7.94716 4.59259 9.1153 4.59259 10.3333C4.59259 11.5514 5.07645 12.7195 5.93773 13.5808C6.79901 14.4421 7.96715 14.9259 9.18519 14.9259C10.4032 14.9259 11.5714 14.4421 12.4326 13.5808C13.2939 12.7195 13.7778 11.5514 13.7778 10.3333C13.7778 9.1153 13.2939 7.94716 12.4326 7.08588C11.5714 6.2246 10.4032 5.74074 9.18519 5.74074ZM14.9259 17.2222H3.44444C2.53092 17.2222 1.65481 17.5851 1.00885 18.2311C0.362896 18.877 0 19.7531 0 20.6667C0 23.2293 1.054 25.2822 2.78311 26.6715C4.48467 28.0378 6.76719 28.7037 9.18519 28.7037C11.6032 28.7037 13.8857 28.0378 15.5873 26.6715C17.3141 25.2822 18.3704 23.2293 18.3704 20.6667C18.3704 19.7531 18.0075 18.877 17.3615 18.2311C16.7156 17.5851 15.8394 17.2222 14.9259 17.2222Z" fill="white"/>
-      </svg>
     </div>
   <% end %>
 </div>
@@ -154,6 +150,90 @@
         const overlay = this.querySelector('.overlay');
         overlay.style.display = 'flex';
       });
+    });
+  });
+</script>
+<div id="popup" class="popup">
+  <div class="popup-content">
+    <div class="top-popup">
+      <svg class="close-popup" id="closePopupSave" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M19.9941 16.9964L33.3719 3.63981C33.7717 3.23995 33.9964 2.69763 33.9964 2.13215C33.9964 1.56667 33.7717 1.02435 33.3719 0.624492C32.972 0.224637 32.4297 0 31.8642 0C31.2987 0 30.7564 0.224637 30.3566 0.624492L17 14.0023L3.64343 0.624492C3.24358 0.224637 2.70125 5.02059e-07 2.13577 5.06273e-07C1.57029 5.10486e-07 1.02797 0.224637 0.628116 0.624492C0.228261 1.02435 0.00362441 1.56667 0.00362441 2.13215C0.0036244 2.69763 0.228261 3.23995 0.628116 3.63981L14.0059 16.9964L0.628116 30.3529C0.429087 30.5504 0.271115 30.7852 0.163309 31.044C0.055504 31.3027 0 31.5803 0 31.8606C0 32.1409 0.055504 32.4185 0.163309 32.6772C0.271115 32.936 0.429087 33.1709 0.628116 33.3683C0.825519 33.5673 1.06038 33.7253 1.31914 33.8331C1.5779 33.9409 1.85545 33.9964 2.13577 33.9964C2.4161 33.9964 2.69364 33.9409 2.95241 33.8331C3.21117 33.7253 3.44603 33.5673 3.64343 33.3683L17 19.9905L30.3566 33.3683C30.554 33.5673 30.7888 33.7253 31.0476 33.8331C31.3064 33.9409 31.5839 33.9964 31.8642 33.9964C32.1445 33.9964 32.4221 33.9409 32.6809 33.8331C32.9396 33.7253 33.1745 33.5673 33.3719 33.3683C33.5709 33.1709 33.7289 32.936 33.8367 32.6772C33.9445 32.4185 34 32.1409 34 31.8606C34 31.5803 33.9445 31.3027 33.8367 31.044C33.7289 30.7852 33.5709 30.5504 33.3719 30.3529L19.9941 16.9964Z" fill="#202020"/>
+      </svg>
+    </div>
+    <div class="popup-inner">
+      <p class="title-popup">Bêta Omniscient design</p>
+      <p>Nous sommes ravis de vous accueillir dans cette phase importante de notre projet. La bêta est une étape cruciale pour tester le site, identifier les améliorations nécessaires et construire une expérience qui répond à vos attentes.</p>
+      <div class="popup-decoration">
+        <%= image_tag("logo-white.svg", :alt => "logo omniscient design") %>
+      </div>
+      <p class="subtitle-popup">Découvrir le projet</p>
+      <p>Omniscient Design est né de la volonté de centraliser, sur une plateforme unique, toutes les connaissances liées au monde du design. Qu'il s'agisse de design d'objet, de stylisme ou de scénographie, Omniscient Design aspire à rendre chaque travail, chaque projet et chaque référence aussi accessibles et complets que possible.
+      <br><br>
+      Notre mission est de favoriser le partage, l'exploration et l'enrichissement des savoirs dans tous les domaines du design, en mettant à disposition des ressources exhaustives et facilement consultables, que ce soit pour les étudiants, les professionnels ou les passionnés.</p>
+      <%= link_to presentation_url, class: "button dark" do %>
+        En savoir plus
+      <%end%>
+       <p class="subtitle-popup">Informations sur la bêta</p>
+      <p>1. Phase de test <br>
+      Nous testons activement le site. Cela signifie que des bugs ou des erreurs peuvent survenir. Si vous en repérez, n'hésitez pas à nous les signaler.<br><br>
+      2. Mises à jour fréquentes <br>
+      Nous déployons régulièrement des corrections et des nouvelles fonctionnalités. Vous pouvez suivre l'évolution du site grâce à nos notes de mise à jour.<br><br>
+      3. Réinitialisation possible <br>
+      Pendant la bêta, il est possible que certains comptes, listes ou données soient réinitialisés. Nous nous excusons d’avance pour la gêne occasionnée et vous remercions pour votre compréhension.</p>
+        <%= link_to changelog_url, class: "button dark" do %>
+        Voir les mises à jour
+        <%end%>
+      <div class="popup-decoration">
+        <svg width="186" height="46" viewBox="0 0 186 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_3317_340)">
+          <path d="M23 0L30.0303 15.6304L46 17.8365L34.3773 29.0068L37.214 46L23 37.2715L8.78408 46L11.6227 29.0068L0 17.8365L15.9697 15.6304L23 0Z" fill="white"/>
+          </g>
+          <g clip-path="url(#clip1_3317_340)">
+          <path d="M93 0L100.03 15.6304L116 17.8365L104.377 29.0068L107.214 46L93 37.2715L78.7841 46L81.6227 29.0068L70 17.8365L85.9697 15.6304L93 0Z" fill="white"/>
+          </g>
+          <g clip-path="url(#clip2_3317_340)">
+          <path d="M163 0L170.03 15.6304L186 17.8365L174.377 29.0068L177.214 46L163 37.2715L148.784 46L151.623 29.0068L140 17.8365L155.97 15.6304L163 0Z" fill="white"/>
+          </g>
+          <defs>
+          <clipPath id="clip0_3317_340">
+          <rect width="46" height="46" fill="white"/>
+          </clipPath>
+          <clipPath id="clip1_3317_340">
+          <rect width="46" height="46" fill="white" transform="translate(70)"/>
+          </clipPath>
+          <clipPath id="clip2_3317_340">
+          <rect width="46" height="46" fill="white" transform="translate(140)"/>
+          </clipPath>
+          </defs>
+        </svg>
+      </div>
+      <p class="subtitle-popup">Vos feedbacks</p>
+      <p>En pleine phase bêta, vos retours sont essentiels pour nous ! Partagez vos impressions, suggestions et commentaires pour nous aider à améliorer Omniscient Design. Votre avis est précieux et nous guide dans l'optimisation de notre plateforme. Merci de faire partie de cette aventure !</p>
+        <%= link_to new_feedback_url, class: "button dark" do %>
+        Donner votre avis
+        <%end%>
+    </div>
+  </div>
+</div>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const openPopupButton = document.getElementById("openPopup");
+    const closePopupButton = document.getElementById("closePopupSave");
+    const popup = document.getElementById("popup");
+
+    openPopupButton.addEventListener("click", function() {
+      popup.style.display = "flex";
+    });
+
+    closePopupButton.addEventListener("click", function() {
+      popup.style.display = "none";
+    });
+
+    // Fermer la popup en cliquant en dehors de celle-ci
+    window.addEventListener("click", function(event) {
+      if (event.target === popup) {
+        popup.style.display = "none";
+      }
     });
   });
 </script>
