--- a/app/views/pages/validation.html.erb
+++ b/app/views/pages/validation.html.erb
@@ -283,7 +283,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <%= form_with url: "", method: :patch, id: "rejectForm" do |form| %>
+        <%= form_with url: "", method: :patch, id: "rejectForm", authenticity_token: true do |form| %>
           <div class="form-group">
             <%= form.label :rejection_reason, "Raison du refus" %>
             <%= form.text_area :rejection_reason, class: "form-control", id: "rejectionReasonField" %>
